--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,6 +10,10 @@ button {
   border-radius: 20px;
 }
 
+#btnA {
+  background-color: yellow;
+}
+
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
@@ -53,8 +57,6 @@ button {
     #btnA {
         font-size: 20px;
         position:absolute; top:380px; left:2%; width:43%; height:60px; 
-        background-color: yellow;
-        
     }
     
     #btnB {
