--- a/www/css/style.css
+++ b/www/css/style.css
@@ -16,6 +16,24 @@ button {
   font-weight: bold;
 }
 
+#btnB {
+  background-color: yellow;
+  color: green;
+  font-weight: bold;
+}
+
+#btnC {
+  background-color: yellow;
+  color: green;
+  font-weight: bold;
+}
+
+#btnD {
+  background-color: yellow;
+  color: green;
+  font-weight: bold;
+}
+
 #time {
   box-shadow: 5px 5px 5px; 
   width: 50%; 
@@ -68,17 +86,22 @@ button {
     
     #btnA {
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:43%; height:60px; 
+        position:absolute; top:380px; left:2%; width:23%; height:60px; 
     }
     
     #btnB {
         font-size: 20px;
-        position:absolute; top:380px; left:45%; width:25%; height:60px; 
+        position:absolute; top:380px; left:25%; width:25%; height:60px; 
     }
 
     #btnC {
-        font-size: 10px;
-        position:absolute; top:380px; left:70%; width:28%; height:60px; 
+        font-size: 20px;
+        position:absolute; top:380px; left:50%; width:25%; height:60px; 
+    }
+
+    #btnD {
+        font-size: 20px;
+        position:absolute; top:380px; left:75%; width:23%; height:60px; 
     }
     
     #minute {
