--- a/www/css/style.css
+++ b/www/css/style.css
@@ -103,6 +103,21 @@ button {
         font-size: 20px;
         position:absolute; top:380px; left:65%; width:33%; height:60px; 
     }
+
+    #btnE {
+        font-size: 20px;
+        position:absolute; top:500px; left:2%; width:32%; height:60px; 
+    }
+
+    #btnF {
+        font-size: 20px;
+        position:absolute; top:500px; left:35%; width:31%; height:60px; 
+    }
+
+    #btnG {
+        font-size: 20px;
+        position:absolute; top:500px; left:66%; width:32%; height:60px; 
+    }
     
     #minute {
         font-size: 30px;
