--- a/www/css/style.css
+++ b/www/css/style.css
@@ -58,6 +58,7 @@ button {
   margin: 0 auto;
 }
 
+
 #time::after {
   content: "秒";
 }
@@ -93,6 +94,22 @@ button {
         position:absolute; top:340px; 
         left:10px; right:10px;
     }
+
+    #information1 {
+        color: black;
+        font-size: 20px;
+        text-align: center;
+        position:absolute; top:570px; 
+        left:40px; right:10px;
+    }
+    #information2 {
+        color: black;
+        font-size: 20px;
+        text-align: center;
+        position:absolute; top:590px; 
+        left:40px; right:10px;
+    }
+
     
     #mycanvas {
         color: #ffffff;
